--- a/index.html
+++ b/index.html
@@ -229,8 +229,9 @@
             <!--
               OBS: Detta använder Formspree (gratis) så du slipper backend.
               STEG 3 (nästa): Jag visar hur du skapar din Formspree-länk och byter action="".
-            -->
-            <form class="form" action="#" method="POST">
+            --><form class="form" name="waitlist" method="POST" data-netlify="true" action="/thanks.html">
+  <input type="hidden" name="form-name" value="waitlist" />
+
               <label>
                 <span>Email</span>
                 <input
@@ -301,3 +302,4 @@
     </script>
   </body>
 </html>
+
