--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
             
               OBS: Detta använder Formspree (gratis) så du slipper backend.
               STEG 3 (nästa): Jag visar hur du skapar din Formspree-länk och byter action="".
-         <form class="form" name="waitlist" method="POST" data-netlify="true" action="/thanks.html">
+         <form class="form" name="waitlist" method="POST" data-netlify="true"action="/thanks/">
   <input type="hidden" name="form-name" value="waitlist" />
-  <input type="hidden" name="redirect" value="/thanks.html" />
+ <input type="hidden" name="redirect" value="/thanks/" />
 
               <label>
                 <span>Email</span>
@@ -303,5 +303,6 @@
     </script>
   </body>
 </html>
+
 
 
