--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
   </head>
 
   <body>
+    <form name="waitlist" data-netlify="true" netlify-honeypot="bot-field" hidden>
+  <input type="text" name="email" />
+</form>
+
     <header class="header">
       <div class="container header-inner">
         <div class="brand">
@@ -313,6 +317,7 @@
     </script>
   </body>
 </html>
+
 
 
 
